--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "axios": "^0.15.3",
     "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.16.1",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
+    "faker": "^4.1.0",
     "firebase": "^4.9.0",
     "history": "^4.6.3",
     "morgan": "^1.8.1",
