--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.16.1",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
+    "exif": "^0.6.0",
     "exif-js": "^2.3.0",
     "exifreader": "^2.2.0",
     "express": "^4.14.1",
