--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-grid-gallery": "^0.4.8",
+    "react-image-layout": "^1.0.0",
     "react-packery-component": "^1.0.2",
     "react-redux": "^5.0.2",
     "react-redux-firebase": "^2.0.2",
