--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "faker": "^4.1.0",
     "firebase": "^4.9.0",
     "history": "^4.6.3",
+    "mapbox-gl": "^0.44.0",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
@@ -46,6 +47,7 @@
     "react-dom": "^16.0.0",
     "react-grid-gallery": "^0.4.8",
     "react-image-layout": "^1.0.0",
+    "react-mapbox-gl": "^3.5.0",
     "react-packery-component": "^1.0.2",
     "react-redux": "^5.0.2",
     "react-redux-firebase": "^2.0.2",
