--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "history": "^4.6.3",
     "mapbox-gl": "^0.44.0",
     "morgan": "^1.8.1",
+    "nodemailer": "^4.4.2",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "pg": "^6.1.2",
