--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-redux": "^5.0.2",
     "react-redux-firebase": "^2.0.2",
     "react-router-dom": "^4.1.1",
+    "react-sizeme": "^2.3.6",
     "react-stack-grid": "^0.7.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
